--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+sojourner (0.3.6) fremantle; urgency=low
+
+  * Added conference data for FOSDEM 2018.
+
+ -- Andrew Savchenko <bircoph@gmail.com>  Wed, 31 Jan 2017 17:05:00 +0300
+
 sojourner (0.3.5) fremantle; urgency=low
 
   * Added conference data for FOSDEM 2017.
